# cookiecutter-fastapi

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: Dockerfile  docker-build.sh  docker-compose.yml  main.py  pyproject.toml
{{ cookiecutter.project_slug }}/app/: config.py
{{ cookiecutter.project_slug }}/src/: app.py  config.py  scanner.py
{{ cookiecutter.project_slug }}/src/core/: shared.py
