[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [{ name = "{{ cookiecutter.author }}" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]